--- a/react-vite/package.json
+++ b/react-vite/package.json
@@ -23,6 +23,7 @@
     "@mui/utils": "^7.3.3",
     "@mui/x-data-grid": "^8.14.1",
     "@supabase/supabase-js": "2.89.0",
+    "axios": "1.13.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "echarts": "6.0.0",
